--- a/client/src/Component/Dashboard/Groups/Groups.css
+++ b/client/src/Component/Dashboard/Groups/Groups.css
@@ -12,3 +12,19 @@
     display: flex;
     flex-direction: column;
 }
+
+.dGroupInviteDiv {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.dGroupInviteText {
+    text-align: center;
+    width: 100%;
+    margin: 0;
+    font-size: 1.5em;
+}
